# pear_admin_rust

./: .pre-commit-config.yaml  Cargo.toml  README.md  _typos.toml  cliff.toml  deny.toml  pear-admin.db
query_filters_macros/: Cargo.toml
query_filters_macros/examples/: query_filters.rs
query_filters_macros/src/: lib.rs  query_filters.rs
query_filters_traits/: Cargo.toml
query_filters_traits/src/: lib.rs
server/: Cargo.toml
server/src/: database.rs  lib.rs  main.rs
server/src/controller/: mod.rs
server/src/controller/api/: common.rs  dept.rs  dict_data.rs  dict_type.rs  mod.rs  photo.rs  power.rs  role.rs  system_log.rs  user.rs
server/src/controller/dto/: mod.rs  user.rs
server/src/controller/page/: dept.rs  dict.rs  index.rs  mod.rs  photo.rs  power.rs  role.rs  system_log.rs  user.rs
server/src/controller/vo/: common.rs  dept.rs  dict.rs  mod.rs  photo.rs  power.rs  role.rs  system_log.rs  user.rs
server/src/domain/models/: admin.rs  admin_online.rs  auth.rs  login_info.rs  mod.rs  oper_log.rs  pear_config.rs  prelude.rs  role.rs  role_auth.rs  sys_conf.rs  task.rs  task_log.rs  task_server.rs
server/src/middleware/: auth.rs
server/src/models/: dept.rs  dict_data.rs  dict_type.rs  mod.rs  photo.rs  power.rs  prelude.rs  role.rs  role_power.rs  system_log.rs  user.rs  user_role.rs
server/src/router/: common.rs  dept.rs  dict.rs  mod.rs  photo.rs  power.rs  role.rs  system_log.rs  user.rs
server/src/service/: common.rs  dept.rs  dict_data.rs  dict_type.rs  mod.rs  monitor.rs  photo.rs  power.rs  role.rs  role_power.rs  system_log.rs  user.rs  user_role.rs
server/src/utils/: mod.rs
server/src/utils/auto_service/: mod.rs  models.rs  prelude.rs
src/: lib.rs
src/controller/api/: user.rs
src/controller/page/: user.rs
static/admin/css/other/: console2.css
static/admin/data/: dataTree2.json  dtree.json  menu-bak-0513.json  menu.json  menu.json.bak  organizationtree.json  role.json
static/component/layui/: layui.js
static/component/layui/css/modules/laydate/default/: laydate.css
static/component/pear/: pear.js
static/component/pear/css/: pear.css
static/component/pear/css/module/: code.css  form.css  iconPicker.css  layer.css  link.css  loading.css  menu.css  message.css  step.css  tag.css  treetable.css
static/component/pear/css/module/dtree/: dtree.css  dtree.js
static/component/pear/font/: iconfont.css  iconfont.js
static/component/pear/module/: admin.js  area.js  button.js  common.js  context.js  count.js  cropper.js  drawer.js  dtree.js  echarts.js  echartsTheme.js  frame.js  hash.js  http.js  iconPicker.js  loading.js  menu.js  message.js  select.js  step.js  tab.js  tag.js  theme.js  topBar.js  treetable.js
static/component/pear/module/tinymce/: tinymce.js
static/config/: pear.config.json  pear.config.yml
template/: index.hbs  login.hbs  monitor.hbs  welcome.hbs
template/system/dept/: add.hbs  edit.hbs  list.hbs
template/system/dict/: list.hbs
template/system/dict/dict_data/: add.hbs  edit.hbs
template/system/dict/dict_type/: add.hbs  edit.hbs
template/system/photo/: add.hbs  list.hbs
template/system/power/: add.hbs  edit.hbs  list.hbs
template/system/role/: add.hbs  edit.hbs  list.hbs  power.hbs
template/system/system_log/: list.hbs
template/system/user/: add.hbs  edit.hbs  list.hbs
(+22 files in other folders)
