[package]
name = "pear_admin_rust"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros"] }
handlebars = "6.1.0"
once_cell = "1.19.0"
sea-orm = { version = "=1.1.0-rc.1", features = ["sqlx-sqlite", "runtime-async-std-native-tls"] }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
walkdir = "2.5.0"
query_filters_macros = { path = "../query_filters_macros" }
query_filters_traits = { path = "../query_filters_traits" }
serde = "1.0.210"
serde_json = "1.0.128"
thiserror = "1.0.63"
